syntax = "proto3";

package io.products.channelPlatform.domain;

option java_outer_classname = "ChannelPlatformDomain";

message ChannelPlatformState {
    string channel_id = 1;
    string channel_name = 2;
    string channel_endpoint = 3;
}